--- a/DoAnKhoaIT/DoAnKhoaIT/Areas/GiaoVien/Views/Shared/_LayoutGV.cshtml
+++ b/DoAnKhoaIT/DoAnKhoaIT/Areas/GiaoVien/Views/Shared/_LayoutGV.cshtml
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="~/Templates/images/iconsgu.png" rel="shortcut icon" type="image/x-icon">
 
-   
+    <link href="/Assets/Guest/awesomefont/css/font-awesome.min.css" type="text/css" rel="stylesheet">
     <link rel=”stylesheet” href=”https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css”>
 
     <link href="/Assets/GiaoVien/University/21_HUFI/css/bootstrap.css" rel="stylesheet" />
@@ -72,10 +72,10 @@
                                         </span>
                                     </div>
                                 </li>
-                                <div class="pull-right" style="margin-top: 8px">
+                                <div class="pull-right" style="margin-top: 0px">
                                     <ul class="nav pull-right">
                                         <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="account_circle" style="color: red;"></i> <b class="caret"></b></a>
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-wheelchair fa-2x" style="color: red;"></i> <b class="caret"></b></a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="/user/preferences"><i class="icon-cog"></i> Preferences</a></li>
                                                 <li><a href="/help/support"><i class="icon-envelope"></i> Contact Support</a></li>
